--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   number_picker:
     path: ./number_picker
   badges: ^1.2.0
+  get_storage: 1.4.0
 
 
   # The following adds the Cupertino Icons font to your application.
