--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   get_storage: 1.4.0
   flutter_range_slider: ^1.5.0
   intl: ^0.17.0
+  flutter_masked_text: ^0.8.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
