--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   flutter_range_slider: ^1.5.0
   intl: ^0.17.0
   flutter_masked_text: ^0.8.0
+  file_picker: ^2.1.7
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
